game grid added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 <body>
     <h1>TicTacToe</h1>
+    <section id="game">
+        <div class="game-container">
+            <div class="square">a</div>
+            <div class="square">b</div>
+            <div class="square">c</div>
+            <div class="square">d</div>
+            <div class="square">e</div>
+            <div class="square">f</div>
+            <div class="square">g</div>
+            <div class="square">h</div>
+            <div class="square">i</div>
+        </div>
+    </section>
     <script src="app.js"></script>
 </body>
 </html>
