--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>TicTacToe</title>
-</head>
-<body>
-    <h1>TicTacToe</h1>
-    <section id="game">
-        <div class="game-container">
-            <div class="square">a</div>
-            <div class="square">b</div>
-            <div class="square">c</div>
-            <div class="square">d</div>
-            <div class="square">e</div>
-            <div class="square">f</div>
-            <div class="square">g</div>
-            <div class="square">h</div>
-            <div class="square">i</div>
-        </div>
+  </head>
+  <body>
+    <h1 id="title">TicTacToe</h1>
+    <section id="game-container">
+      <div id="game-board">
+        <div class="square">a</div>
+        <div class="square">b</div>
+        <div class="square">c</div>
+        <div class="square">d</div>
+        <div class="square">e</div>
+        <div class="square">f</div>
+        <div class="square">g</div>
+        <div class="square">h</div>
+        <div class="square">i</div>
+      </div>
+
+      <div id="game-info">
+        <h2 id="timer">03:00</h2>
+        <p class="player">
+          <span class="arrow">&#8680;</span>Player 1:
+          <span class="score">0</span>
+        </p>
+        <p class="player">
+          <span class="arrow">&#8680;</span>Player 2:
+          <span class="score">0</span>
+        </p>
+      </div>
     </section>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
