player class added

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div id="game-info">
         <h2 id="timer">03:00</h2>
         <p class="player">
-          <span class="arrow">&#8680;</span>Player 1:
-          <span class="score">0</span>
+          <span id="p1arrow" class="arrow">&#8680;</span>Player 1:
+          <span id="p1score" class="score">0</span>
         </p>
         <p class="player">
-          <span class="arrow">&#8680;</span>Player 2:
-          <span class="score">0</span>
+          <span id="p2arrow" class="arrow">&#8680;</span>Player 2:
+          <span id="p2score" class="score">{score}</span>
         </p>
       </div>
     </section>
