--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1 id="title">TicTacToe</h1>
     <section id="game-container">
       <div id="game-board">
-        <div class="square">a</div>
-        <div class="square">b</div>
-        <div class="square">c</div>
-        <div class="square">d</div>
-        <div class="square">e</div>
-        <div class="square">f</div>
-        <div class="square">g</div>
-        <div class="square">h</div>
-        <div class="square">i</div>
+        <div class="square" id="sq1"></div>
+        <div class="square" id="sq2"></div>
+        <div class="square" id="sq3"></div>
+        <div class="square" id="sq4"></div>
+        <div class="square" id="sq5"></div>
+        <div class="square" id="sq6"></div>
+        <div class="square" id="sq7"></div>
+        <div class="square" id="sq8"></div>
+        <div class="square" id="sq9"></div>
       </div>
 
       <div id="game-info">
