--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
       </div>
 
       <div id="game-info">
-        <h2 id="timer">03:00</h2>
+        <h2 id="timer">0</h2>
         <p class="player">
           <span id="p1arrow" class="arrow">&#8680;</span>Player 1:
           <span id="p1score" class="score">0</span>
         </p>
         <p class="player">
           <span id="p2arrow" class="arrow">&#8680;</span>Player 2:
-          <span id="p2score" class="score">{score}</span>
+          <span id="p2score" class="score">0</span>
         </p>
       </div>
     </section>
+    <script src="timer.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
